--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
     </section>
     
-    <s<section class="content-section" id="projects">
+    <section class="content-section" id="projects">
     <h2 class="section-title">Projects</h2>
     
     <div class="project-container-wrapper">
